JumpScript/tests/baselines/reference/functionCall14.errors.txt
tests/cases/compiler/functionCall14.jump(5,5): error TS2345: Argument of type '1' is not assignable to parameter of type 'string'.


==== tests/cases/compiler/functionCall14.jump (1 errors) ====
    function foo(a?:string, ...b:number[]){} 
    foo('foo', 1); 
    foo('foo'); 
    foo();
    foo(1, 'bar');
        ~
!!! error TS2345: Argument of type '1' is not assignable to parameter of type 'string'.
    foo('foo', 1, 3);
    